$Id$

Changes between 0.8.6a and 0.8.6-bugfix (not yet released):
-----------------------------------------------------------
Various bugfixes notably:
 * out-of-bound read in demuxers
 * demuxers crashes (incl. CVE-2007-0256)
 * Mac OS X Interface crashes

Mac OS X Interface & Port:
 * further usability improvements
 * Improved Delete-Preferences-Script


Changes between 0.8.6 and 0.8.6a:
---------------------------------

CDDA / VCDX plugins:
 * Security updates (VideoLAN-SA-0701)

Mac OS X Interface:
 * Fullscreen controller improvements


Changes between 0.8.5 and 0.8.6:
--------------------------------

Playlist:
 * Shoutcast TV listings support

Input:
 * Support for RTSP authentication
 * Support for adding subtitles on the fly
 * Fixed MPEG-PS duration calculation
 * ATSC support for DVB input
 * Partial reading support for DVR-ms recordings
 * Partial reading support for MXF and GXF fileformat
 * Improved support for Flash Video files

Decoders:
 * Native WMV9/VC-1 support
 * WMA Speech support (through binary codecs)
 * VP5/VP6 - Flash Video support (not VP61)
 * The True Audio Lossless codec support
 * Matroska WavPack support
 * Improved H.264 support (interlaced, speed improvements etc but no PAFF)
 * Fixed a problem with MPEG2 field pictures
 * Fixed swapped colors on DVB subtitles
 
Video output:
 * Additional OpenGL effects (cylinder, torus, sphere, ...)
 * Experimental Direct3D 9 video output (win32). Best served on Vista :)
 * Improved libcaca support

Interfaces:
 * All
   * New hotkeys for crop and zoom
   * Support for snapshots from the HTTP interface
 * Windows
   * Systray support in skins
 * OS X
   * Support for Apple Remote control
   * Fullscreen controller panel (artwork by Simon Damkjær Andersen)
   * New playmode buttons (artwork by Simon Damkjær Andersen)
   * right/ctrl-click menu in video outputs
   * Main Menu uses autohide when playing videos in fullscreen mode
 * Linux
   * Notifications using notification-daemon

Windows port: