@@ -9,6 +9,7 @@ Various bugfixes notably:
 
 Mac OS X Interface & Port:
  * further usability improvements
+ * screensaver/automatic sleep mode is enabled when a video is paused
  * Improved Delete-Preferences-Script
 
 
